fix landscape mode h1 size, adjust margin for hockey net on mobile, animation fixes so the pucks actually go into the net

--- a/assets/animation.css
+++ b/assets/animation.css
@@ -2,8 +2,9 @@
 .puckContainer {
     position: absolute;
     max-width: 100%;
-    height: 90%;
+    height: 100%;
     float: left;
+    bottom: 0;
     transform: rotateZ(45deg);
     z-index: 6;
     overflow: hidden;
@@ -14,10 +15,11 @@
     top: 50%;
     left: 50%;
     height: 4px;
+    margin-top: 5rem;
     background: linear-gradient(-45deg,rgba(40, 40, 65, 0.4), rgba(0, 0, 255, 0));
     border-radius: none;
     filter: drop-shadow(0 0 3px rgba(105, 155, 255, 1));
-    animation: tail 8000ms ease-in-out infinite, hockeyPuck 8000ms ease-in-out infinite;
+    animation: tail 5000ms ease-in-out infinite, hockeyPuck 5000ms ease-in-out infinite;
 }
 .hockeyPuck::before {
     content: '';
@@ -28,7 +30,7 @@
     background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgb(0, 0, 0), rgba(0, 0, 255, 0));
     transform: translateX(50%);
     border-radius: 100%;
-    animation: puckShadow 15000ms ease-in-out infinite;
+    animation: puckShadow 5000ms ease-in-out infinite;
 }
 .hockeyPuck::after {
     content: '';
@@ -38,65 +40,57 @@
     height: 6px;
     background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgb(0, 0, 0), rgba(0, 0, 255, 0));
     border-radius: 100%;
-    animation: puckShadow 8000ms ease-in-out infinite;
+    animation: puckShadow 5000ms ease-in-out infinite;
     transform: translateX(50%);
 }
+
 .hockeyPuck:nth-child(1) {
-    top: calc(50% - 34px);
-    left: calc(50% - 120px);
-    animation-delay: 8804ms;
-}
-.hockeyPuck:nth-child(1)::before, .hockeyPuck:nth-child(1)::after {
-    animation-delay: 8804ms;
-}
-.hockeyPuck:nth-child(2) {
-    top: calc(50% - 197px);
-    left: calc(50% - 274px);
-    animation-delay: 12048ms;
-}
-.hockeyPuck:nth-child(2)::before, .hockeyPuck:nth-child(2)::after {
-    animation-delay: 12048ms;
-}
-.hockeyPuck:nth-child(3) {
-    top: calc(50% - 131px);
-    left: calc(50% - 126px);
-    animation-delay: 9295ms;
-}
-.hockeyPuck:nth-child(3)::before, .hockeyPuck:nth-child(3)::after {
-    animation-delay: 9295ms;
-}
-.hockeyPuck:nth-child(4) {
-    top: calc(50% - 66px);
-    left: calc(50% - 143px);
-    animation-delay: 14714ms;
-}
-.hockeyPuck:nth-child(4)::before, .hockeyPuck:nth-child(4)::after {
-    animation-delay: 14714ms;
-}
-.hockeyPuck:nth-child(5) {
     top: calc(50% - 42px);
     left: calc(50% - 86px);
-    animation-delay: 6288ms;
+    animation-delay: 1088ms;
+}
+.hockeyPuck:nth-child(1)::before, .hockeyPuck:nth-child(1)::after {
+    animation-delay: 1088ms;
+}
+
+
+.hockeyPuck:nth-child(2) {
+    top: calc(50% - 84px);
+    left: calc(50% - 120px);
+    animation-delay: 2804ms;
+}
+.hockeyPuck:nth-child(2)::before, .hockeyPuck:nth-child(2)::after {
+    animation-delay: 2804ms;
+}
+
+.hockeyPuck:nth-child(3) {
+    top: calc(50% - 82px);
+    left: calc(50% - 246px);
+    animation-delay: 3088ms;
+}
+.hockeyPuck:nth-child(3)::before, .hockeyPuck:nth-child(3)::after {
+    animation-delay: 3088ms;
+}
+
+.hockeyPuck:nth-child(4) {
+    top: calc(50% - 102px);
+    left: calc(50% - 246px);
+    animation-delay: 4339ms;
+}
+.hockeyPuck:nth-child(4)::before, .hockeyPuck:nth-child(4)::after {
+    animation-delay: 4339ms;
+}
+
+.hockeyPuck:nth-child(5) {
+    top: calc(50% - 131px);
+    left: calc(50% - 126px);
+    animation-delay: 7295ms;
 }
 .hockeyPuck:nth-child(5)::before, .hockeyPuck:nth-child(5)::after {
-    animation-delay: 6288ms;
+    animation-delay: 7295ms;
 }
-.hockeyPuck:nth-child(6) {
-    top: calc(50% - 80px);
-    left: calc(50% - 23px);
-    animation-delay: 9232ms;
-}
-.hockeyPuck:nth-child(6)::before, .hockeyPuck:nth-child(6)::after {
-    animation-delay: 9232ms;
-}
-.hockeyPuck:nth-child(7) {
-    top: calc(50% - 12px);
-    left: calc(50% - 246px);
-    animation-delay: 8339ms;
-}
-.hockeyPuck:nth-child(7)::before, .hockeyPuck:nth-child(7)::after {
-    animation-delay: 8339ms;
-}
+
+
 
 @keyframes tail {
     0% {
@@ -126,7 +120,7 @@
         transform: translateX(0);
    }
     100% {
-        transform: translateX(160px);
+        transform: translateX(170px);
    }
 }
 
@@ -136,7 +130,7 @@
             transform: translateX(0);
        }
         100% {
-            transform: translateX(300px);
+            transform: translateX(600px);
        }
     }
   }
